--- a/2023.html
+++ b/2023.html
@@ -28,28 +28,25 @@ body{
 }
 
 .days {
-  background: #F2F2F2;
-  color: #404040;
+  background: #EF2F3C;
 }
 
 .hours {
-  background: #F2F2F2;
-  color: #404040;
+  background: #eeeeee;
+  color: #183059;
 }
 
 .minutes {
-  background: #F2F2F2;
-  color: #404040;
+  background: #276FBF;
 }
 
 .seconds {
-  background: #F2F2F2;
-  color: #404040;
+  background: #F0A202;
 }
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
-  color:  #404040;
+  color:  #183059;
   font-size: 4em;
   text-align: center;
 }
@@ -106,7 +103,7 @@ body{
 </body>
 <script>
     const year = new Date().getFullYear();
-const myDate = new Date('May 7, 2023 00:00:00');
+const myDate = new Date('Oct 15, 2024 00:00:00');
 console.log(myDate);
 
 // countdown
