--- a/2023.html
+++ b/2023.html
@@ -28,25 +28,28 @@ body{
 }
 
 .days {
-  background: #EF2F3C;
+  background: #F2F2F2;
+  color: #404040;
 }
 
 .hours {
-  background: #eeeeee;
-  color: #183059;
+  background: #F2F2F2;
+  color: #404040;
 }
 
 .minutes {
-  background: #276FBF;
+  background: #F2F2F2;
+  color: #404040;  
 }
 
 .seconds {
-  background: #F0A202;
+  background: #F2F2F2;
+  color: #404040;
 }
 
 .numbers {
   font-family: 'Montserrat', sans-serif;
-  color:  #183059;
+  color:  #404040;
   font-size: 4em;
   text-align: center;
 }
@@ -103,7 +106,7 @@ body{
 </body>
 <script>
     const year = new Date().getFullYear();
-const myDate = new Date('May 7, 2024 00:00:00');
+const myDate = new Date('Jun 3, 2023 00:00:00');
 console.log(myDate);
 
 // countdown
